added logic to follow/unfollow users

--- a/Example/AFChatUISample/Podfile
+++ b/Example/AFChatUISample/Podfile
@@ -7,5 +7,6 @@ target 'AFChatUISample' do
 
   # Pods for AFChatUISample
   pod 'AppFriendsUI', :path => '../../../AppFriendsUI'
+  pod 'RNLoadingButton-Swift'
 
 end
