changed code to fix compiler segmentation fault

--- a/Example/AFChatUISample/Podfile
+++ b/Example/AFChatUISample/Podfile
@@ -8,5 +8,6 @@ target 'AFChatUISample' do
   # Pods for AFChatUISample
   pod 'AppFriendsUI', :path => '../../../AppFriendsUI'
   pod 'RNLoadingButton-Swift'
+  pod 'OneSignal'
 
 end
