--- a/Source/AppFriendsResources.bundle/Contents/Info.plist
+++ b/Source/AppFriendsResources.bundle/Contents/Info.plist
@@ -6,6 +6,8 @@
 	<string>15G31</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>CFBundleExecutable</key>
+	<string>AppFriendsResources</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.hacknocraft.AppFriendsResources</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -18,6 +20,10 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleSupportedPlatforms</key>
+	<array>
+		<string>MacOSX</string>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>DTCompiler</key>
@@ -28,6 +34,8 @@
 	<string>GM</string>
 	<key>DTSDKBuild</key>
 	<string>15E60</string>
+	<key>DTSDKName</key>
+	<string>macosx10.11</string>
 	<key>DTXcode</key>
 	<string>0731</string>
 	<key>DTXcodeBuild</key>
