added objective C sample app and make initializaiton of the AppFriends UI SDK eaiser

--- a/Example/AFChatUISample/Podfile
+++ b/Example/AFChatUISample/Podfile
@@ -10,3 +10,12 @@ target 'AFChatUISample' do
   pod 'RNLoadingButton-Swift'
 
 end
+
+target 'AFObjcSample' do
+    # Comment this line if you're not using Swift and don't want to use dynamic frameworks
+    use_frameworks!
+    
+    # Pods for AFChatUISample
+    pod 'AppFriendsUI', :path => '../../../AppFriendsUI'
+    
+end
